@@ -1,3 +1,8 @@
+2002-03-21  Richard Earnshaw  <rearnsha@arm.com>
+
+	* elf32-arm.h (elf32_arm_final_link_relocate case R_ARM_GOTOFF)
+	(case R_ARM_GOT): Handle relocations to Thumb functions.
+
 2002-03-21  Alan Modra  <amodra@bigpond.net.au>
 
 	* coff64-rs6000.c (_bfd_xcoff64_put_symbol_name): Prototype.
